@@ -53,10 +53,6 @@ import org.opennms.core.utils.DBUtils;
  *
  * @author <A HREF="mailto:tarus@opennms.org">Tarus Balog </A>
  * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @author <A HREF="mailto:tarus@opennms.org">Tarus Balog </A>
- * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @version $Id: $
- * @since 1.8.1
  */
 public class SnmpGetNodesServlet extends HttpServlet {
     /**
@@ -131,7 +127,7 @@ public class SnmpGetNodesServlet extends HttpServlet {
 
                 }
             }
-            userSession.setAttribute("lineNodeItems.snmpmanage.jsp", new Integer(lineCount));
+            userSession.setAttribute("lineNodeItems.snmpmanage.jsp", Integer.valueOf(lineCount));
         } finally {
             d.cleanUp();
         }
