@@ -54,15 +54,6 @@ import org.opennms.web.filter.Filter;
  *
  * @author <A HREF="mailto:tarus@opennms.org">Tarus Balog </A>
  * @author <A HREF="mailto:larry@opennms.org">Lawrence Karnowski </A>
- * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @author <A HREF="mailto:tarus@opennms.org">Tarus Balog </A>
- * @author <A HREF="mailto:larry@opennms.org">Lawrence Karnowski </A>
- * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @author <A HREF="mailto:tarus@opennms.org">Tarus Balog </A>
- * @author <A HREF="mailto:larry@opennms.org">Lawrence Karnowski </A>
- * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @version $Id: $
- * @since 1.8.1
  */
 public class AlarmFactory extends Object {
     
@@ -1110,7 +1101,7 @@ public class AlarmFactory extends Object {
             alarm.dpName = rs.getString("dpName");
 
             // node id can be null, in which case nodeID will be 0
-            alarm.nodeID = new Integer(rs.getInt("nodeID"));
+            alarm.nodeID = Integer.valueOf(rs.getInt("nodeID"));
 
             alarm.ipAddr = rs.getString("ipAddr");
 
@@ -1125,9 +1116,15 @@ public class AlarmFactory extends Object {
 
             alarm.lastEventID = rs.getInt("lastEventID");
 
-            alarm.firsteventtime = new Date(rs.getTimestamp("firsteventtime").getTime());
+            Timestamp firsteventtime = rs.getTimestamp("firsteventtime");
+            if (firsteventtime != null) {
+                alarm.firsteventtime = new Date(firsteventtime.getTime());
+            }
 
-            alarm.lasteventtime = new Date(rs.getTimestamp("lasteventtime").getTime());
+            Timestamp lasteventtime = rs.getTimestamp("lasteventtime");
+            if (lasteventtime != null) {
+                alarm.lasteventtime = new Date(lasteventtime.getTime());
+            }
 
             alarm.description = rs.getString("description");
 
@@ -1146,11 +1143,17 @@ public class AlarmFactory extends Object {
 
             alarm.mouseOverText = rs.getString("MouseOverText");
 
-            alarm.suppressedUntil = new Date(rs.getTimestamp("suppressedUntil").getTime());
+            Timestamp suppressedUntil = rs.getTimestamp("suppressedUntil");
+            if (suppressedUntil != null) {
+                alarm.suppressedUntil = new Date(suppressedUntil.getTime());
+            }
 
             alarm.suppressedUser = rs.getString("suppressedUser");
 
-            alarm.suppressedTime = new Date(rs.getTimestamp("suppressedTime").getTime());
+            Timestamp suppressedTime = rs.getTimestamp("suppressedTime");
+            if (suppressedTime != null) {
+                alarm.suppressedTime = new Date(suppressedTime.getTime());
+            }
 
             alarm.acknowledgeUser = rs.getString("alarmAckUser");
 
