@@ -46,6 +46,8 @@ import org.opennms.web.alarm.filter.AlarmIdListFilter;
 import org.opennms.web.alarm.filter.AlarmTypeFilter;
 import org.opennms.web.alarm.filter.SeverityBetweenFilter;
 import org.opennms.web.alarm.filter.SeverityFilter;
+import org.opennms.netmgt.model.alarm.AlarmSummary;
+import org.opennms.web.alarm.filter.*;
 import org.opennms.web.alarm.filter.AlarmCriteria.AlarmCriteriaVisitor;
 import org.opennms.web.alarm.filter.AlarmCriteria.BaseAlarmCriteriaVisitor;
 import org.opennms.web.filter.AndFilter;
@@ -69,8 +71,6 @@ import org.springframework.jdbc.core.simple.SimpleJdbcTemplate;
  * <p>JdbcWebAlarmRepository class.</p>
  *
  * @author ranger
- * @version $Id: $
- * @since 1.8.1
  */
 @Deprecated
 public class JdbcWebAlarmRepository implements WebAlarmRepository, InitializingBean {
@@ -181,7 +181,7 @@ public class JdbcWebAlarmRepository implements WebAlarmRepository, InitializingB
             alarm.dpName = rs.getString("dpName");
 
             // node id can be null, in which case nodeID will be 0
-            alarm.nodeID = new Integer(rs.getInt("nodeID"));
+            alarm.nodeID = Integer.valueOf(rs.getInt("nodeID"));
             alarm.ipAddr = rs.getString("ipAddr");
 
             // This causes serviceID to be null if the column in the database is null
@@ -385,6 +385,10 @@ public class JdbcWebAlarmRepository implements WebAlarmRepository, InitializingB
     }
 
     public List<OnmsAcknowledgment> getAcknowledgments(int alarmId) {
+        throw new UnsupportedOperationException("Not supported yet. JdbcWebAlarmRepository is deprecated.");
+    }
+
+    public List<AlarmSummary> getCurrentNodeAlarmSummaries() {
         throw new UnsupportedOperationException("Not supported yet. JdbcWebAlarmRepositony is deprecated.");
     }
 
@@ -404,4 +408,5 @@ public class JdbcWebAlarmRepository implements WebAlarmRepository, InitializingB
     private JdbcOperations jdbc() {
         return m_simpleJdbcTemplate.getJdbcOperations();
     }
+
 }
